updated css and added footer

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -9,7 +9,8 @@
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/normalize.css"
+	<link rel="stylesheet" href="css/normalize.css">
+
 	</head>
 	<body>
 
@@ -30,31 +31,16 @@
         <li>Does all your work for you with our <br>revolutionary AI technology</br></li>
     <section class="citation">
       <blockquote><em>&quot;Relaxr changed my life. I’ve been able <br>to travel the world, spend limited time <br>working and my boss keeps thanking me <br>for crushing work.&quot;</em><br>Amanda, Intuit</br></blockquote>
+		</section>
+		<section class="second-button">
+      <button id="button-footer">Sign Up Now!</button>
+		</section>
     <footer>
-      <a href>Sign Up Now!</a>
-      <h4>Relaxr</h4>
-    </footer>
-  </body>
-</html>
-
-
-
-    <img>
-		<h1></h1>
-		<h2></h2>
-		<h3></h3>
-		<h1></h1>
-		<p></p>
-
-		<p>quote was here<cite>-Amanda</cite>	</p>
-
-		<a href="#"></a>
-		<footer>
-			<h4>Relaxr</h4> <!--logo -->
-			<nav></nav>	 <!-- icons -->
-			<p></p> <!-- copyright -->
+			  <h4>Relaxr</h4>
+				<nav>
+				</nav>
+				<p>Copyright 2015. Relaxr.</p>
 		</footer>
 
-
-	</body>
+  </body>
 </html>
