--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -10,10 +10,11 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 	</head>
 	<body>
-
+		<div id="container">
 		<header>
       <section class="landing-section">
       <h1>Relaxr</h1>
@@ -23,12 +24,13 @@
     </header>
     <section class="benefits">
       <h1>Benefits</h1>
-      <p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+      <p>The perfect personal assistant. Relaxr does your job <br>for you so you can enjoy life as it is meant to be.</br></p>
       <ul>
         <li>Schedule meetings for you</li>
         <li>Excel automation to complete your work for you</li>
         <li>Responds to emails on your behalf</li>
         <li>Does all your work for you with our <br>revolutionary AI technology</br></li>
+			</section>
     <section class="citation">
       <blockquote><em>&quot;Relaxr changed my life. I’ve been able <br>to travel the world, spend limited time <br>working and my boss keeps thanking me <br>for crushing work.&quot;</em><br>Amanda, Intuit</br></blockquote>
 		</section>
@@ -37,10 +39,10 @@
 		</section>
     <footer>
 			  <h4>Relaxr</h4>
-				<nav>
-				</nav>
+				<a href="https://twitter.com"><img src="../imagesg/twitter.png" alt="Twitter Logo" class="social-icon"></a>
+				<a href="https://facebook.com"><img src="../images/facebook.png" alt="Facebook Logo" class="social-icon"></a>
 				<p>Copyright 2015. Relaxr.</p>
 		</footer>
-
+	</div>
   </body>
 </html>
