updated footer css

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -37,11 +37,11 @@
 		<section class="second-button">
       <button id="button-footer">Sign Up Now!</button>
 		</section>
-    <footer>
+		<footer class="social-icon">
 			  <h4>Relaxr</h4>
-				<a href="https://twitter.com"><img src="../imagesg/twitter.png" alt="Twitter Logo" class="social-icon"></a>
-				<a href="https://facebook.com"><img src="../images/facebook.png" alt="Facebook Logo" class="social-icon"></a>
-				<p>Copyright 2015. Relaxr.</p>
+				<a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter Logo"></a>
+				<a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook Logo"></a>
+				<p>&copy; 2015. Relaxr.</p>
 		</footer>
 	</div>
   </body>
